@@ -14,7 +14,7 @@ public class SequenceOfTravelerId extends Asn1SequenceOf<Long> {
 	public SequenceOfTravelerId(List<Long> numbers) {
 		super();
 		for (Long number: numbers){
-			this.add(new Long(number));
+			this.add(Long.valueOf(number));
 		}
 	}
 	
